--- a/package.json
+++ b/package.json
@@ -18,6 +18,21 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@swimlane/ngx-charts": "^20.4.1",
+    "angular-notifier": "^14.0.0",
+    "d3": "^7.8.5",
+    "d3-array": "^3.2.4",
+    "d3-brush": "^3.0.0",
+    "d3-color": "^3.1.0",
+    "d3-force": "^3.0.0",
+    "d3-format": "^3.1.0",
+    "d3-hierarchy": "^3.1.2",
+    "d3-interpolate": "^3.0.1",
+    "d3-scale": "^4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-time-format": "^4.1.0",
+    "flowbite": "^1.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -26,13 +41,17 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   }
 }
